# couchverse

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
server/: .env.example  CLAUDE.md  README.md  pyproject.toml
server/src/podcast_commentary/agent/: angles.py  comedian.py  commentary.py  commentary_pipeline.py  commentary_scheduler.py  control_channel.py  director.py  director_strategy.py  dispatch_metadata.py  fox_config.py  intro_sequencer.py  main.py  metrics.py  persona_config.py  persona_runtime.py  playout_waiter.py  podcast_pipeline.py  podcast_player.py  prompts.py  room_state.py  secondary_room.py  selection_mode_controller.py  selector.py  skip_coordinator.py  speech_gate.py  user_turn.py
server/src/podcast_commentary/agent/fox_configs/: __init__.py  alien.py  cat_girl.py  chaos_agent.py  david_sacks.py  default.py  fox.py
server/src/podcast_commentary/agent/persona_configs/: __init__.py  alien.py  cat_girl.py  chamath.py  david_friedberg.py  (+2 more)
server/src/podcast_commentary/api/: app.py  livekit_dispatch.py  livekit_tokens.py
server/src/podcast_commentary/core/: config.py  db.py
server/tests/: test_api_sessions.py  test_livekit_tokens.py
server/tests/agent/: _stub_config.py  test_co_speaker_context.py  test_control_channel.py  test_director.py  test_director_teardown.py  test_intro_sequencer.py  test_intro_variation.py  test_playout_waiter.py  test_secondary_room.py  test_selection_mode_controller.py  test_selector.py  test_speech_gate.py
server/tests/integration/: __init__.py  conftest.py  mock_lemonslice.py  test_dual_room_session.py
(+28 files in other folders)
