[project]
name = "couchverse-server"
version = "0.1.0"
description = "Live AI commentary on whatever audio is playing in the user's browser tab"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "livekit-api~=1.0",
    "livekit-agents~=1.4.6",
    "fastapi[standard]",
    "pydantic-settings",
    "python-dotenv",
    "asyncpg",
]

[dependency-groups]
agent = [
    "livekit-agents[silero,groq,elevenlabs,turn-detector,lemonslice]~=1.4.6",
    "livekit-agents~=1.4.6",
]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "agent"]

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_commentary"]

[tool.ruff]
line-length = 100
